HREPTWO-4341 - Repreater controls for hippo:mirror are half hidden  - Fixed nested compound fields right margin  - Fixed IE7 'add' butotn not visible after adding one item
svn path=/hippo-ecm/trunk/; revision=23401

--- a/cms/package/skin/src/main/webapp/screen_ie7.css
+++ b/cms/package/skin/src/main/webapp/screen_ie7.css
@@ -23,6 +23,10 @@ table.hippo-search-section .hippo-search-section-input input {
   position: static;
 }
 
+.hippo-editor .hippo-editor-field .hippo-editor-field-subfield .hippo-editor-field-subfield .hippo-editor-field-subfield-item{margin-bottom: 2px;}
+
+.hippo-editor .hippo-editor-field a.add-16 {position:relative; z-index: 1;}
+
 .toggle-button {
   padding-bottom: 1px;
 }
